crates/rome_formatter/tests/specs/prettier/js/decorators-export/before_export.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: before_export.js

---
# Input
```js
@decorator
export class Foo {}

@decorator
export default class {}

```

# Output
```js
@decorator
export class Foo {}

@decorator
export default class {}

```

# Errors
```
error[SyntaxError]: decorator are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ before_export.js:1:1
  │
1 │ @decorator
  │ ^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: decorator are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ before_export.js:4:1
  │
4 │ @decorator
  │ ^^^^^^^^^^ TypeScript only syntax


```


